--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -11,4 +11,6 @@
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+
+  <%= f.input :instructions, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'Full'} } %>
 <% end %>
