--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :calories %>
     <%= f.input :fat %>
     <%= f.input :protein %>
+    <%= f.input :image %>
   </div>
 
   <div class="form-actions">
