--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,15 @@
     <header>
       <%= render 'layouts/navigation' %>
     </header>
-    <main role="main">
+    <!-- <main role="main"> -->
+    <br><br>
        <%= render 'layouts/messages' %>
+  <div class="bgtint"></div>
+
+       <br /><br /><br />
+       <div class="main-class">
        <%= yield %>
-    </main>
+       </div>
+    <!-- </main> -->
   </body>
 </html>
