--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,10 @@
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
+        <div class="pull-right" style="margin-top:3%;margin-bottom:-3%;">
+   <%= render 'visitors/search_ing' %>
+        
+    </div>
     </div>
   </div>
 </nav>
