--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -7,11 +7,12 @@
     <%= f.input :fat %>
     <%= f.input :protein %>
     <%= f.input :image %>
+  <%= f.input :instructions, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'Full'} } %>
+  <%= f.input :ingredient_list %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
 
-  <%= f.input :instructions, :as => :ckeditor, :input_html => { :ckeditor => {:toolbar => 'Full'} } %>
 <% end %>
